<resources>
    <string name="app_name">SciCalc ☁ Calculator</string>


    <string name="erase"> </string>

    <string name="divide">÷</string>
    <string name="parenthesis2">)</string>
    <string name="parenthesis1">(</string>
    <string name="clear">C</string>


    <string name="multiply">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <string name="sub">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>


    <string name="add">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>


    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="enter_a_value">Enter a Value</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunctionText">prime</string>

</resources>